# edgar

./: .env.template  .gitignore  .mcp.json  .secrets.baseline  ALPHA_RELEASE_CHECKLIST.md  ALPHA_RELEASE_STATUS.md  ALPHA_TEST_SUMMARY.txt  AUTH_FIX_CHECKLIST.md  AUTH_FIX_SUMMARY.md  BUG3_FIX_SUMMARY.md  CHANGELOG_LOGGING_ENV.md  CHAT_FEATURE_IMPLEMENTATION.md  CHAT_FEATURE_SUMMARY.md  CLAUDE.md  CLI_COMMANDS_REFERENCE.md  CODER_MODE_IMPLEMENTATION.md  CODE_GENERATOR_TEST_COMPLETION_REPORT.md  CODE_STRUCTURE.md  COMPREHENSIVE_COVERAGE_AUDIT_DAY3.md  CONFIDENCE_THRESHOLD_QA_REPORT.md  CONFIDENCE_THRESHOLD_QA_SUMMARY.md  CONSTRAINT_ENFORCER_TEST_REPORT.md  DOCUMENTATION_STATUS.md  DOCUMENTATION_T16_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  EDGAR_PROJECT_WORKFLOW_VERIFICATION.md  EXAMPLE_PARSER_TEST_COMPLETION.md  EXCEL_SOURCE_TEST_SUMMARY.md  EXTERNAL_ARTIFACTS_USER_DOCS_COMPLETE.md  FACTORY_COVERAGE_ANALYSIS.md  FILE_DATA_SOURCE_TEST_SUMMARY.md  FORTUNE_100_COMP_POC_ANALYSIS.md  GENERATED_CODE_EXAMPLE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPORT_ERRORS_FIX_SUMMARY.md  INITIALIZATION_SUMMARY.md  INTERACTIVE_CHAT_MODE_TEST_EVIDENCE.md  INTERACTIVE_CHAT_QA_REPORT.json  LOGGING_AND_ENV_SETUP.md  (+89 more)
.claude-mpm/: PM_INSTRUCTIONS.md  config.json  configuration.yaml  mcp_auto_config_preference.json  pm_skills_registry.yaml
.kuzu-memory-backups/: CLAUDE.md.backup_20251230_175944  CLAUDE.md.backup_20251230_175951  config.yaml.backup_20251230_175952  settings.local.json.backup_20251230_175952
docs/: BREAKTHROUGH_XBRL_EXECUTIVE_COMPENSATION.md  README.md  (+11 more)
(+943 files in other folders)
